--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
+        <link rel="htmlheader" href="page_a.html">
         <title>TEST</title>
     </head>
     <body>
