--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
-        <link rel="htmlheader" href="page_a.html">
+        
         <title>TEST</title>
     </head>
     <body>
+            <p href="page_a.html">PageA</p>
     </body>
     <p>Esto es un párrafo</p>
 </html>
