--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>TEST</title>
     </head>
     <body>
-        <p href="page_a.html">PageA</p>
+        <a href="page_a.html">PageA</a>
     </body>
     <p>Esto es un párrafo</p>
 </html>
